--- a/week1_intro/crossentropy_method.ipynb
+++ b/week1_intro/crossentropy_method.ipynb
@@ -517,7 +517,7 @@
    ],
    "source": [
     "from submit import submit_taxi\n",
-    "submit_taxi(generate_session, policy, \"junho.choi@gmail.com\", \"8mi7Ty23og5DKF9M\")"
+    "submit_taxi(generate_session, policy, \"junho.choi@gmail.com\", \"\")"
    ]
   },
   {
@@ -546,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
