--- a/week1_intro/deep_crossentropy_method.ipynb
+++ b/week1_intro/deep_crossentropy_method.ipynb
@@ -396,28 +396,8 @@
    ],
    "source": [
     "from submit import submit_mountain_car\n",
-    "submit_mountain_car(generate_session, \"junho.choi@gmail.com\", \"KoDVoipMkB1jv8oa\")"
+    "submit_mountain_car(generate_session, \"junho.choi@gmail.com\", \"\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "env = gym.make(\"MountainCar-v0\").env"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -436,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
