--- a/week1_intro/gym_interface.ipynb
+++ b/week1_intro/gym_interface.ipynb
@@ -1044,17 +1044,8 @@
    ],
    "source": [
     "from submit import submit_interface\n",
-    "submit_interface(policy, \"junho.choi@gmail.com\", \"o6elqXlTAMCI67Co\")"
+    "submit_interface(policy, \"junho.choi@gmail.com\", \"\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1073,7 +1064,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
