--- a/week3_model_free/sarsa.ipynb
+++ b/week3_model_free/sarsa.ipynb
@@ -339,7 +339,7 @@
    "outputs": [],
    "source": [
     "from submit import submit_sarsa\n",
-    "submit_sarsa(rewards_ql, rewards_sarsa, \"junho.choi@gmail.com\", \"V2FvBqF5igcL3lsn\")"
+    "submit_sarsa(rewards_ql, rewards_sarsa, \"junho.choi@gmail.com\", \"\")"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
