--- a/week3_model_free/qlearning.ipynb
+++ b/week3_model_free/qlearning.ipynb
@@ -589,15 +589,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -676,7 +667,7 @@
    ],
    "source": [
     "from submit import submit_qlearning\n",
-    "submit_qlearning(submit_rewards1, submit_rewards2, \"junho.choi@gmail.com\", \"f0a5FRvbJpgxPlJ1\")"
+    "submit_qlearning(submit_rewards1, submit_rewards2, \"junho.choi@gmail.com\", \"\")"
    ]
   },
   {
@@ -705,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
