--- a/week4_approx/dqn_atari.ipynb
+++ b/week4_approx/dqn_atari.ipynb
@@ -1400,7 +1400,7 @@
     }
    ],
    "source": [
-    "submit_breakout_2(\"junho.choi@gmail.com\", \"FwPGRZO51oMLUz6q\", session_rewards)"
+    "submit_breakout_2(\"junho.choi@gmail.com\", \"\", session_rewards)"
    ]
   },
   {
