Remove temporary token

--- a/week5_policy_based/practice_a3c.ipynb
+++ b/week5_policy_based/practice_a3c.ipynb
@@ -815,7 +815,7 @@
    "source": [
     "from submit import submit_kungfu\n",
     "env = make_env()\n",
-    "submit_kungfu(agent, env, evaluate, \"junho.choi@gmail.com\", \"tgtOUeQDK8v7CyRc\")"
+    "submit_kungfu(agent, env, evaluate, \"junho.choi@gmail.com\", \"\")"
    ]
   },
   {
