--- a/week5_policy_based/practice_reinforce.ipynb
+++ b/week5_policy_based/practice_reinforce.ipynb
@@ -572,7 +572,7 @@
    ],
    "source": [
     "from submit import submit_cartpole\n",
-    "submit_cartpole(generate_session, \"junho.choi@gmail.com\", \"vLoZIQ59qXPcPuKI\")"
+    "submit_cartpole(generate_session, \"junho.choi@gmail.com\", \"\")"
    ]
   },
   {
@@ -605,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
