--- a/week6_outro/practice_mcts.ipynb
+++ b/week6_outro/practice_mcts.ipynb
@@ -694,7 +694,7 @@
    "source": [
     "from submit import submit_mcts\n",
     "\n",
-    "submit_mcts(total_reward, \"junho.choi@gmail.com\", \"Pyvo3UesCtnqyshq\")"
+    "submit_mcts(total_reward, \"junho.choi@gmail.com\", \"\")"
    ]
   },
   {
